samples/negative/10_error_position_parse.pas
program n10;
var
  x: integer
begin
  x := 1
end.
