samples/negative/10_error_position_parse.stderr.expected
error: parse error at line 4, column 1:  --> 4:1
  |
4 | begin
  | ^---
  |
  = expected rel_op, add_op, or mul_op
